--- a/css/main.css
+++ b/css/main.css
@@ -586,12 +586,24 @@ video {
   }
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
 }
 
 .m-1 {
   margin: 0.25rem;
+}
+
+.m-2 {
+  margin: 0.5rem;
+}
+
+.m-3 {
+  margin: 0.75rem;
 }
 
 .m-4 {
@@ -602,13 +614,14 @@ video {
   margin: 1.25rem;
 }
 
-.m-3 {
-  margin: 0.75rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .mx-1 {
@@ -616,14 +629,8 @@ video {
   margin-right: 0.25rem;
 }
 
-.mx-5 {
+.ml-5 {
   margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
-.mx-3 {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
 }
 
 .mt-3 {
@@ -634,28 +641,20 @@ video {
   margin-top: 1rem;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .ml-3 {
   margin-left: 0.75rem;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
+.inline-block {
+  display: inline-block;
 }
 
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -666,20 +665,92 @@ video {
   display: none;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-1\.5 {
+  height: 0.375rem;
+}
+
 .w-64 {
   width: 16rem;
 }
 
-.w-24 {
-  width: 6rem;
+.w-80 {
+  width: 20rem;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .w-32 {
   width: 8rem;
 }
 
-.w-80 {
-  width: 20rem;
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-1\/5 {
+  width: 20%;
+}
+
+.w-3\/5 {
+  width: 60%;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-1\/6 {
+  width: 16.666667%;
+}
+
+.w-3\/6 {
+  width: 50%;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
+}
+
+.w-5\/6 {
+  width: 83.333333%;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-1 {
+  width: 0.25rem;
 }
 
 .flex-col {
@@ -692,6 +763,14 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
 }
 
 .space-x-7 > :not([hidden]) ~ :not([hidden]) {
@@ -708,9 +787,8 @@ video {
   border-radius: 0.25rem;
 }
 
-.rounded-r-full {
-  border-top-right-radius: 9999px;
-  border-bottom-right-radius: 9999px;
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .border-4 {
@@ -721,8 +799,20 @@ video {
   border-width: 1px;
 }
 
+.border-2 {
+  border-width: 2px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
+}
+
+.border-solid {
+  border-style: solid;
+}
+
+.border-double {
+  border-style: double;
 }
 
 .border-slate-200 {
@@ -744,34 +834,44 @@ video {
   border-color: inherit;
 }
 
+.border-indigo-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(79 70 229 / var(--tw-border-opacity));
+}
+
+.border-indigo-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(165 180 252 / var(--tw-border-opacity));
+}
+
+.border-lightPink {
+  --tw-border-opacity: 1;
+  border-color: rgb(240 180 239 / var(--tw-border-opacity));
+}
+
+.border-cyan {
+  --tw-border-opacity: 1;
+  border-color: rgb(36 227 227 / var(--tw-border-opacity));
+}
+
+.border-darkBrown {
+  --tw-border-opacity: 1;
+  border-color: rgb(181 81 4 / var(--tw-border-opacity));
+}
+
+.border-darkBlue {
+  --tw-border-opacity: 1;
+  border-color: rgb(4 83 181 / var(--tw-border-opacity));
+}
+
+.border-green {
+  --tw-border-opacity: 1;
+  border-color: rgb(30 138 21 / var(--tw-border-opacity));
+}
+
 .bg-logoColor {
   --tw-bg-opacity: 1;
   background-color: rgb(57 58 59 / var(--tw-bg-opacity));
-}
-
-.bg-cyan {
-  --tw-bg-opacity: 1;
-  background-color: rgb(36 227 227 / var(--tw-bg-opacity));
-}
-
-.bg-skyBlue {
-  --tw-bg-opacity: 1;
-  background-color: rgb(162 217 242 / var(--tw-bg-opacity));
-}
-
-.bg-lightPink {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 180 239 / var(--tw-bg-opacity));
-}
-
-.bg-green {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 138 21 / var(--tw-bg-opacity));
-}
-
-.bg-gray {
-  --tw-bg-opacity: 1;
-  background-color: rgb(176 176 176 / var(--tw-bg-opacity));
 }
 
 .bg-lightGray {
@@ -779,20 +879,46 @@ video {
   background-color: rgb(215 217 217 / var(--tw-bg-opacity));
 }
 
-.p-6 {
-  padding: 1.5rem;
+.bg-green {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 138 21 / var(--tw-bg-opacity));
 }
 
-.p-3 {
-  padding: 0.75rem;
+.bg-cyan {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 227 227 / var(--tw-bg-opacity));
+}
+
+.bg-lightBrown {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 203 165 / var(--tw-bg-opacity));
+}
+
+.bg-lightPink {
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 180 239 / var(--tw-bg-opacity));
+}
+
+.bg-darkBrown {
+  --tw-bg-opacity: 1;
+  background-color: rgb(181 81 4 / var(--tw-bg-opacity));
+}
+
+.bg-darkBlue {
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 83 181 / var(--tw-bg-opacity));
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .p-1 {
   padding: 0.25rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-2 {
@@ -815,26 +941,20 @@ video {
   padding-right: 0.75rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .pl-2 {
   padding-left: 0.5rem;
 }
 
-.pr-3 {
-  padding-right: 0.75rem;
+.pt-1 {
+  padding-top: 0.25rem;
 }
 
-.pl-3 {
-  padding-left: 0.75rem;
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .text-center {
@@ -872,6 +992,16 @@ video {
 .text-slate-200 {
   --tw-text-opacity: 1;
   color: rgb(226 232 240 / var(--tw-text-opacity));
+}
+
+.text-blueBlue {
+  --tw-text-opacity: 1;
+  color: rgb(8 27 89 / var(--tw-text-opacity));
+}
+
+.text-lightPink {
+  --tw-text-opacity: 1;
+  color: rgb(240 180 239 / var(--tw-text-opacity));
 }
 
 .hover\:text-cyan:hover {
