--- a/css/main.css
+++ b/css/main.css
@@ -586,10 +586,6 @@ video {
   }
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
 }
@@ -602,35 +598,9 @@ video {
   margin: 0.5rem;
 }
 
-.m-3 {
-  margin: 0.75rem;
-}
-
-.m-4 {
-  margin: 1rem;
-}
-
-.m-5 {
-  margin: 1.25rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-}
-
-.ml-5 {
-  margin-left: 1.25rem;
 }
 
 .mt-3 {
@@ -645,16 +615,8 @@ video {
   margin-top: 0.5rem;
 }
 
-.ml-3 {
-  margin-left: 0.75rem;
-}
-
-.inline-block {
-  display: inline-block;
-}
-
-.inline {
-  display: inline;
+.ml-5 {
+  margin-left: 1.25rem;
 }
 
 .flex {
@@ -669,112 +631,52 @@ video {
   display: none;
 }
 
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-3 {
-  height: 0.75rem;
+.h-1\.5 {
+  height: 0.375rem;
 }
 
 .h-1 {
   height: 0.25rem;
 }
 
-.h-1\.5 {
-  height: 0.375rem;
-}
-
-.h-24 {
-  height: 6rem;
-}
-
-.w-64 {
-  width: 16rem;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-96 {
-  width: 24rem;
+.w-1\/6 {
+  width: 16.666667%;
 }
 
 .w-32 {
   width: 8rem;
 }
 
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-1\/5 {
-  width: 20%;
-}
-
-.w-3\/5 {
-  width: 60%;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-1\/6 {
-  width: 16.666667%;
-}
-
-.w-3\/6 {
-  width: 50%;
-}
-
 .w-4\/6 {
   width: 66.666667%;
-}
-
-.w-5\/6 {
-  width: 83.333333%;
-}
-
-.w-24 {
-  width: 6rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-3 {
-  width: 0.75rem;
 }
 
 .w-40 {
   width: 10rem;
 }
 
-.w-1 {
-  width: 0.25rem;
+.w-24 {
+  width: 6rem;
 }
 
-.w-2\/6 {
-  width: 33.333333%;
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .grid-flow-col {
   grid-auto-flow: column;
-}
-
-.grid-rows-4 {
-  grid-template-rows: repeat(4, minmax(0, 1fr));
-}
-
-.grid-rows-2 {
-  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .grid-rows-3 {
@@ -805,10 +707,6 @@ video {
   gap: 1rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
 .space-x-7 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.75rem * var(--tw-space-x-reverse));
@@ -817,10 +715,6 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.rounded {
-  border-radius: 0.25rem;
 }
 
 .rounded-lg {
@@ -843,14 +737,6 @@ video {
   border-bottom-width: 2px;
 }
 
-.border-solid {
-  border-style: solid;
-}
-
-.border-double {
-  border-style: double;
-}
-
 .border-slate-200 {
   --tw-border-opacity: 1;
   border-color: rgb(226 232 240 / var(--tw-border-opacity));
@@ -870,16 +756,6 @@ video {
   border-color: inherit;
 }
 
-.border-indigo-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(79 70 229 / var(--tw-border-opacity));
-}
-
-.border-indigo-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(165 180 252 / var(--tw-border-opacity));
-}
-
 .border-lightPink {
   --tw-border-opacity: 1;
   border-color: rgb(240 180 239 / var(--tw-border-opacity));
@@ -890,11 +766,6 @@ video {
   border-color: rgb(36 227 227 / var(--tw-border-opacity));
 }
 
-.border-darkBrown {
-  --tw-border-opacity: 1;
-  border-color: rgb(181 81 4 / var(--tw-border-opacity));
-}
-
 .border-darkBlue {
   --tw-border-opacity: 1;
   border-color: rgb(4 83 181 / var(--tw-border-opacity));
@@ -903,6 +774,11 @@ video {
 .border-green {
   --tw-border-opacity: 1;
   border-color: rgb(30 138 21 / var(--tw-border-opacity));
+}
+
+.border-darkBrown {
+  --tw-border-opacity: 1;
+  border-color: rgb(181 81 4 / var(--tw-border-opacity));
 }
 
 .border-transparent {
@@ -929,19 +805,9 @@ video {
   background-color: rgb(36 227 227 / var(--tw-bg-opacity));
 }
 
-.bg-lightBrown {
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 203 165 / var(--tw-bg-opacity));
-}
-
 .bg-lightPink {
   --tw-bg-opacity: 1;
   background-color: rgb(240 180 239 / var(--tw-bg-opacity));
-}
-
-.bg-darkBrown {
-  --tw-bg-opacity: 1;
-  background-color: rgb(181 81 4 / var(--tw-bg-opacity));
 }
 
 .bg-darkBlue {
@@ -949,14 +815,24 @@ video {
   background-color: rgb(4 83 181 / var(--tw-bg-opacity));
 }
 
-.bg-pink {
+.bg-darkBrown {
   --tw-bg-opacity: 1;
-  background-color: rgb(242 167 193 / var(--tw-bg-opacity));
+  background-color: rgb(181 81 4 / var(--tw-bg-opacity));
+}
+
+.bg-lightBrown {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 203 165 / var(--tw-bg-opacity));
 }
 
 .bg-lightBlue {
   --tw-bg-opacity: 1;
   background-color: rgb(7 176 232 / var(--tw-bg-opacity));
+}
+
+.bg-veryLightCyan {
+  --tw-bg-opacity: 1;
+  background-color: rgb(215 248 250 / var(--tw-bg-opacity));
 }
 
 .p-6 {
@@ -973,6 +849,10 @@ video {
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-2 {
@@ -995,30 +875,12 @@ video {
   padding-right: 0.75rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .pl-2 {
   padding-left: 0.5rem;
 }
 
-.pt-1 {
-  padding-top: 0.25rem;
-}
-
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
 }
 
 .text-center {
@@ -1040,6 +902,11 @@ video {
   line-height: 1rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .font-thin {
   font-weight: 100;
 }
@@ -1050,6 +917,10 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .text-slate-100 {
@@ -1070,11 +941,6 @@ video {
 .text-blueBlue {
   --tw-text-opacity: 1;
   color: rgb(8 27 89 / var(--tw-text-opacity));
-}
-
-.text-lightPink {
-  --tw-text-opacity: 1;
-  color: rgb(240 180 239 / var(--tw-text-opacity));
 }
 
 .text-white {
